2007-01-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Address portability issues for Cygwin/Mingw32
	* urbi-with-openssl.m4: Add library and header OpenSSL default paths.

2007-01-14  Akim Demaille  <akim.demaille@free.fr>

	Don't create and dump the log file if there is no failure
	* build-aux/check.mk: I.e., put the "if" at the right place.
	Also, use a tmp file and move it when done.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Separate sections
	* check.mk: When compiling the logs, prepend an empty line.

2007-01-09  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Correct wrong behavior in OpenSSL macro.
	* urbi-with-openssl.m4: Correct behavior.

2007-01-08  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix webots script.
	* urbi-with-webots.m4: Fix missing "test" in this script.

2007-01-07  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Rename OpenSSL macro, formatting changes.
	* openssl.m4: Renaming as...
	* urbi-with-openssl.m4: This.

2007-01-07  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix macro names, formatting changes.
	* liburbi.m4: Rename as...
	* urbi-with-urbi-sdk.m4: this.
	* urbi-with-webots.m4: Rename as...
	* webots.m4: this.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix OpenSSL check.
	* openssl.m4: Various fix.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix broken path in the Webots macro.
	* webots.m4: Fix broken path.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Typo
	* webots.m4: Typo.

2007-01-05  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Fix Webots Macro on Mac and Windows.
	* webots.m4: Add webots path on Mac and Windows.

2007-01-04  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add a macro that check for LibUrbi.
	* liburbi.m4: Check for LibUrbi. New.

2007-01-04  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Add a macro that checks for Webots.
	* openssl.m4: Typo.
	* webots.m4: Check for Webots. New.
