@@ -1,3 +1,8 @@
+2007-01-19  Akim Demaille  <demaille@gostai.com>
+
+	-Werror
+	* urbi-prog-cxx.m4: Handle it here.
+
 2007-01-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
 
 	Address portability issues for Cygwin/Mingw32
